# sidewinder

./: Cargo.toml  README.md  docker-compose.yaml
.github/workflows/: main.yaml
src/api/: Cargo.toml
src/api/src/: error.rs  lib.rs  service.rs
src/core/: Cargo.toml
src/core/src/: lib.rs
src/core/src/exec/: driver.rs  mod.rs
src/core/src/server/: mod.rs
src/drivers/docker/: Cargo.toml
src/drivers/docker/src/: lib.rs
src/sidewinder/: Cargo.toml
src/sidewinder/src/: main.rs
