[workspace]
resolver = "2"
members = [
    "src/api",
    "src/core",
    "src/drivers/docker",
    "src/sidewinder",
]

[workspace.dependencies]
sidewinder-core = { path = "src/core" }
sidewinder-api = { path = "src/api" }

# Execution Drivers
sidewinder-docker = { path = "src/drivers/docker" }

# Shared Packages
anyhow = "1.0.92"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.18", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.16.0", features = ["v4"] }
