[package]
name = "sidewinder-api"
version = "0.1.0"
edition = "2021"

[dependencies]
sidewinder-core.workspace = true

axum = { version = "0.8.1", features = ["macros"] }
axum-macros = "0.5.0"

anyhow.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true