[package]
name = "sidewinder"
version = "0.1.0"
edition = "2021"

[features]
default = ["docker"]
docker = ["dep:sidewinder-docker"]

[dependencies]
sidewinder-core.workspace = true
sidewinder-api.workspace = true
sidewinder-docker = { workspace = true, optional = true }

clap = { version = "4.5.32", features = ["derive"] }

anyhow.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
